commit fixed footer overlap

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  margin: 0;
+  margin-bottom: 108px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -25,8 +25,9 @@ nav .brand-logo {
 }
 
 nav ul a {
-  color: black;
-  background-color: #fbd966;
+  color: #fbd966;
+  background-color: none;
+  /* background-color: #fbd966; */
   align-items: center;
   margin: 2px;
   border-radius: 5px;
@@ -187,14 +188,20 @@ h6 {
 
 /* FOOTER */
 .page-footer {
+  align-content: left;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
+  margin: 0;
   background-color: #bc6d2d;
 }
 
-.page-footer .footer-copyright{
+#footer-container {
+  margin: 0;
+}
+
+#copywrite {
   color: #fbd966;
   text-align: right;
 }
